opam-version: "1.2"
maintainer: "cf443@cam.ac.uk"
authors: ["Craig Ferguson"]
homepage: "https://github.com/craigfe/trace-rpc"
bug-reports: "https://github.com/craigfe/trace-rpc/issues"
dev-repo: "https://github.com/craigfe/trace-rpc.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "ocaml"   {>= "4.03.0"}
  "dune"    {build & >= "1.1.0"}
  "fmt"     {>= "0.8.0"}
  "uri"     {>= "1.3.12"}
  "jsonm"   {>= "1.0.0"}
  "lwt"     {>= "2.4.7"}
  "digestif"
  "ocamlgraph"
  "logs"    {>= "0.5.0"}
  "astring"
  "alcotest" {with-test}
]
